# Bakaloria-Agent

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER_README.md  Dockerfile  api.py  bot.py  build-and-push.sh  docker-compose.hostinger.yml  docker-compose.yml  generate_bulbul_image.py  pdf_to_images.py  pyproject.toml  upload_books_to_gcs.py
bulbul_agent/: main.py
bulbul_agent/core/: __init__.py  goal_service.py  instruction.md  local_runtime.py  memory_service.py  model_config.py  outreach_service.py  persona_service.py  service.py
bulbul_agent/core/tools/: __init__.py  goal_tool.py  persona_tool.py  progress_tool.py
core/: __init__.py  instruction.md  memory_service.py  service.py  supabase_session_service.py
core/tools/: __init__.py  memory_tool.py  persona_tool.py
scripts/: migrate_supabase_memory_to_goa.py  migrate_supabase_persona_to_goa.py  supabase_schema.sql
teacher_agent/: __init__.py  agent.py  service.py  tools.py
telegram_bot/: __init__.py  config.py  handlers.py  session_manager.py  utils.py
telegram_service/: main.py
telegram_service/telegram_bot/: __init__.py  config.py  handlers.py  ui.py
telegram_service/telegram_bot/transcription/: __init__.py  base.py  gemini_stt.py
tests/: test_agent_goal_integration.py  test_goal_service.py  test_goal_tool.py  test_memory_service.py  test_persona_service.py  test_telegram_service.py  test_telegram_ui.py  test_transcription.py
