[project]
name = "bakoliria"
version = "0.1.0"
description = ""
dependencies = [
    "google-adk>=1.15.0,<2.0.0",
    "google-genai>=1.0.0",
    "opentelemetry-exporter-gcp-trace>=1.9.0,<2.0.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "google-cloud-aiplatform[evaluation,agent-engines]>=1.118.0,<2.0.0",
    "protobuf>=6.31.1,<7.0.0",
    "litellm>=1.80.0",
    "python-telegram-bot[all]>=21.0.0,<22.0.0",
    "psycopg2-binary>=2.9.9",
    "supabase>=2.0.0",
]
requires-python = ">=3.10,<3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "telegram_bot"]
